// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressInputs AddressFrom should match default snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "marginHorizontal": 8,
      "minHeight": 52,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "15%",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      From:
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginLeft": 8,
          "marginTop": 8,
          "minHeight": 52,
          "padding": 10,
        },
        {
          "borderColor": "#b7bbc8",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        placeholderStyle={
          {
            "backgroundColor": "#f3f5f9",
          }
        }
        useNativeDriver={true}
      >
        <View
          onLoadEnd={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
        >
          <View
            style={
              {
                "height": 32,
                "width": 32,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              [
                {},
                {
                  "backgroundColor": "#eee",
                },
                {
                  "backgroundColor": "#f3f5f9",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "alignItems": "flex-start",
            "flexDirection": "column",
            "marginHorizontal": 8,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          DUMMY_ACCOUNT
        </Text>
      </View>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Balance: 0x5
      </Text>
    </View>
  </View>
</View>
`;

exports[`AddressInputs AddressFrom should match snapshot when layout is vertical 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "marginHorizontal": 8,
      "minHeight": 82,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "15%",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      From:
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginLeft": 0,
          "marginTop": 8,
          "minHeight": 52,
          "padding": 10,
        },
        {
          "borderColor": "#b7bbc8",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        placeholderStyle={
          {
            "backgroundColor": "#f3f5f9",
          }
        }
        useNativeDriver={true}
      >
        <View
          onLoadEnd={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
        >
          <View
            style={
              {
                "height": 32,
                "width": 32,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              [
                {},
                {
                  "backgroundColor": "#eee",
                },
                {
                  "backgroundColor": "#f3f5f9",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "alignItems": "flex-start",
            "flexDirection": "column",
            "marginHorizontal": 8,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          DUMMY_ACCOUNT
        </Text>
      </View>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Balance: 0x5
      </Text>
    </View>
  </View>
</View>
`;

exports[`AddressInputs AddressTo should match default snapshot 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "marginHorizontal": 8,
        "minHeight": 52,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "15%",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      To:
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderRadius": 8,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginLeft": 8,
          "marginVertical": 8,
          "minHeight": 52,
          "paddingHorizontal": 10,
        },
        {
          "borderColor": "#b7bbc8",
        },
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      testID="add-address-button"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          placeholderStyle={
            {
              "backgroundColor": "#f3f5f9",
            }
          }
          useNativeDriver={true}
        >
          <View
            onLoadEnd={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "height": 32,
                "overflow": "hidden",
                "width": 32,
              }
            }
          >
            <View
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                [
                  {},
                  {
                    "backgroundColor": "#eee",
                  },
                  {
                    "backgroundColor": "#f3f5f9",
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 12,
              "bottom": 8,
              "left": 20,
              "position": "absolute",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ca3542",
                  "fontSize": 14,
                },
                undefined,
                {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "flexDirection": "column",
                  "marginHorizontal": 8,
                },
                {
                  "flex": 0.9,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                DUMMY_ACCOUNT
              </Text>
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                0x9004C...A0d12
              </Text>
              <View
                style={
                  {
                    "paddingTop": 2,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#457a39",
                        "fontSize": 15,
                      },
                      undefined,
                      {
                        "fontFamily": "anticon",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`AddressInputs AddressTo should match snapshot when layout is vertical 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginHorizontal": 8,
        "minHeight": 82,
      },
      {
        "marginTop": 8,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "15%",
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      To:
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderRadius": 8,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginLeft": 0,
          "marginVertical": 8,
          "minHeight": 52,
          "paddingHorizontal": 10,
        },
        {
          "borderColor": "#b7bbc8",
        },
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      testID="add-address-button"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "position": "relative",
          }
        }
      >
        <View
          placeholderStyle={
            {
              "backgroundColor": "#f3f5f9",
            }
          }
          useNativeDriver={true}
        >
          <View
            onLoadEnd={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "height": 32,
                "overflow": "hidden",
                "width": 32,
              }
            }
          >
            <View
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                [
                  {},
                  {
                    "backgroundColor": "#eee",
                  },
                  {
                    "backgroundColor": "#f3f5f9",
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 12,
              "bottom": 8,
              "left": 20,
              "position": "absolute",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ca3542",
                  "fontSize": 14,
                },
                undefined,
                {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "flexDirection": "column",
                  "marginHorizontal": 8,
                },
                {
                  "flex": 0.9,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                DUMMY_ACCOUNT
              </Text>
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                0x9004C...A0d12
              </Text>
              <View
                style={
                  {
                    "paddingTop": 2,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#457a39",
                        "fontSize": 15,
                      },
                      undefined,
                      {
                        "fontFamily": "anticon",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
